Added Web and Arxiv search capabilities

--- a/src/langgraphagenticai/ui/uiconfigfile.ini
+++ b/src/langgraphagenticai/ui/uiconfigfile.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 PAGE_TITLE = Stateful Agentic AI chatbot
 LLM_OPTIONS = Groq, OpenAI
-USECASE_OPTIONS = Basic Chatbot, chatbot with tools
+USECASE_OPTIONS = Basic Chatbot, Chatbot With Tools
 GROQ_MODEL_OPTIONS= qwen/qwen3-32b, deepseek-r1-distill-llama-70b, gemma2-9b-it, compound-beta-kimi, llama-3.1-8b-instant
 OPENAI_MODEL_OPTIONS = gpt-4o, gpt-4o-mini, o3-mini, gpt-4.1
