--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "arxiv>=2.2.0",
     "faiss-cpu>=1.11.0.post1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "langchain-core>=0.3.72",
     "langchain-groq>=0.3.6",
     "langchain-openai>=0.3.28",
+    "langchain-tavily>=0.2.11",
     "langgraph>=0.6.3",
     "pandas>=2.3.1",
     "streamlit>=1.47.1",
